# typescript-definitions

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  TODO.md  bitbucket-pipelines.yml
example/: Cargo.toml  Makefile  test.ts
example/src/: interface.rs  main.rs
scripts/: readme.sh
src/: README.rs  builder.rs  derive_enum.rs  derive_struct.rs  lib.rs  patch.rs  quotet.rs
tests/: .map.rs.pending-snap  map.rs  patch.rs  typescript.rs  verifiers.rs
typescript-definitions-derive/: Cargo.toml  Makefile  build.rs
typescript-definitions-derive/src/: attrs.rs  derive_enum.rs  derive_struct.rs  guards.rs  lib.rs  patch.rs  quotet.rs  tests.rs  tfy.rs  tots.rs  typescript.pest  typescript.rs  utils.rs  verify.rs
