[package]
name = "typescript-definitions"
version = "0.1.5"
description = "serde support for exporting Typescript definitions"
readme = "README.md"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://bitbucket.org/athaliana/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]


[lib]
proc-macro = true


[dependencies]
quote = "0.6"
serde_derive_internals = "0.24"
syn = "0.15"
serde = "1"
proc-macro2 = "0.4"
regex = "1"
lazy_static = "1"


[dev-dependencies]
serde_derive = "1"
wasm-bindgen = "0.2"


[features]
export-typescript = []
test = []
