[package]
name = "typescript-definitions"
version = "0.1.7"
description = "serde support for exporting Typescript definitions"
readme = "README.md"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://bitbucket.org/athaliana/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]



[dependencies]
typescript-definitions-derive = { version = "0.1.7",  path = "typescript-definitions-derive" }

[dev-dependencies]
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2"
quote = "0.6"
proc-macro2 = "0.4"
regex = "1"

[features]
export-typescript = ["typescript-definitions-derive/export-typescript"]
test = ["typescript-definitions-derive/test"]

[workspace]
exclude = ["example"]
