[package]
name = "typescript-definitions-derive"
version = "0.1.9"
description = "serde support for exporting Typescript definitions"
authors = ["Tim Ryan <id@timryan.org>", "Sam Rijs <srijs@airpost.net>" , "Ian Castleden <ian.castleden@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://bitbucket.org/athaliana/typescript-definitions"
keywords =["typescript", "serde"]
categories = ["data-structures", "development-tools", "wasm" , "web-programming"]
edition = "2018"


[lib]
proc-macro = true
path = "src/lib.rs"


[dependencies]
quote = "0.6.11"
serde_derive_internals = "0.24.1"
syn = "0.15.26"
proc-macro2 = "0.4.27"
regex = "1.1.0"
lazy_static = "1.2.0"


[dev-dependencies]
serde = { version = "1.0.87", features = ["derive"] }
insta = "0.6.2"

[features]
export-typescript = []
test = []
verifiers = []
